Adicionado arquivo docker-compose.yml e adicionadoa tag <finalname> em application-dev.properties

--- a/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/src/main/resources/db/migration/application-dev.properties
+++ b/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/src/main/resources/db/migration/application-dev.properties
@@ -1,7 +1,13 @@
 # CONFIGURACAO BASICA DO SPRING
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=RM98011
-spring.datasource.password=240885
+server.port=8080
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+#spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+#spring.datasource.username=RM98011
+#spring.datasource.password=240885
 
 #spring.datasource.url=jdbc:oracle:thin:@10.107.140.3:1521:xe
 #spring.datasource.username=system
@@ -12,7 +18,13 @@ spring.datasource.password=240885
 spring.flyway.baselineOnMigrate=true
 
 # MOSTRAR AS INSTRUCOES SQL EXECUTADAS NO BANCO DE DADOS
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+
+#CONFIGURAÇÕES ADICIONAIS DE OUTRO YML
+spring.jpa.open-in-view=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 
 # QUEBRAR A EXIBICAO DA INSTRUCAO SQL EM VARIAS LINHAS
 spring.jpa.properties.hibernate.format_sql=true
@@ -21,4 +33,4 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
 
 # VARIAVEL DE AMBIENTE PARA CRIPTOGRAFAR O TOKEN JWT
-minha.chave.secreta=${JWT.SECRET:fiap}
+#minha.chave.secreta=${JWT.SECRET:fiap}
