--- a/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/src/main/resources/db/migration/application-dev.properties
+++ b/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/src/main/resources/db/migration/application-dev.properties
@@ -4,6 +4,9 @@ server.port=8080
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
 
 #spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
 #spring.datasource.username=RM98011
@@ -23,7 +26,6 @@ spring.jpa.show-sql=true
 #CONFIGURAÇÕES ADICIONAIS DE OUTRO YML
 spring.jpa.open-in-view=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 
 # QUEBRAR A EXIBICAO DA INSTRUCAO SQL EM VARIAS LINHAS
