--- a/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/.github/workflows/continuous_delivery.yaml
+++ b/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/.github/workflows/continuous_delivery.yaml
@@ -14,18 +14,21 @@ jobs:
         ports:
           - 1521:1521
         env:
-          ORACLE_PASSWORD: 240885
-          APP_USER: RM98011
-          APP_USER_PASSWORD: 240885
+          ORACLE_PASSWORD: ${{ secrets.ORACLE_PASSWORD }}
+          APP_USER: ${{ secrets.APP_USER }}
+          APP_USER_PASSWORD: ${{ secrets.APP_USER_PASSWORD }}
         options: >-
-          --health-cmd "echo 'SELECT 1 FROM DUAL;' | sqlplus -s RM98011/240885@//localhost:1521/XE"
-          --health-interval 30s
-          --health-timeout 10s
-          --health-retries 10
+          --health-cmd "exit 0"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
+
+      - name: Instalar netcat
+        run: sudo apt-get install netcat -y
 
       - name: Aguardar o Oracle DB estar pronto
         run: |
@@ -44,8 +47,8 @@ jobs:
       - name: Configurar variáveis de ambiente do Oracle
         run: |
           echo "SPRING_DATASOURCE_URL=jdbc:oracle:thin:@localhost:1521:XE" >> $GITHUB_ENV
-          echo "SPRING_DATASOURCE_USERNAME=RM98011" >> $GITHUB_ENV
-          echo "SPRING_DATASOURCE_PASSWORD=240885" >> $GITHUB_ENV
+          echo "SPRING_DATASOURCE_USERNAME=${{ secrets.APP_USER }}" >> $GITHUB_ENV
+          echo "SPRING_DATASOURCE_PASSWORD=${{ secrets.APP_USER_PASSWORD }}" >> $GITHUB_ENV
 
       - name: Cache das dependências do Maven
         uses: actions/cache@v3
@@ -78,4 +81,3 @@ jobs:
 
       # - name: Deploy para o servidor
       #   # Adicione aqui os passos para o deploy
-
