--- a/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/pom.xml
+++ b/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/pom.xml
@@ -94,13 +94,14 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- MySQL Connector/J -->
+		<!--
 		<dependency>
     		<groupId>com.mysql</groupId>
     		<artifactId>mysql-connector-j</artifactId>
     		<version>${mysql-connector-java.version}</version>
     		<scope>runtime</scope>
 		</dependency>
+		 MySQL Connector/J -->
 
 		<!-- JWT Library -->
 		<dependency>
