Atualizando arquivo, colocando novosworkflows

--- a/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/src/main/resources/application.properties
+++ b/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # CONFIGURACAO BASICA DO SPRING
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=RM98011
-spring.datasource.password=240885
+spring.datasource.url=jdbc:mysql://db:3306/your_database
+
+spring.datasource.username=your_username
+spring.datasource.password=your_password
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 #spring.datasource.url=jdbc:oracle:thin:@10.107.140.3:1521:xe
 #spring.datasource.username=system
