--- a/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/docker-compose.yml
+++ b/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/docker-compose.yml
@@ -2,20 +2,21 @@ version: '3.8'
 
 services:
   db:
-    image: gvenzl/oracle-xe:21-slim
+    image: mysql:8.0
     environment:
-      - ORACLE_PASSWORD=240885
-      - APP_USER=RM98011
-      - APP_USER_PASSWORD=240885
+      - MYSQL_ROOT_PASSWORD=your_root_password
+      - MYSQL_DATABASE=your_database
+      - MYSQL_USER=your_username
+      - MYSQL_PASSWORD=your_password
     ports:
-      - "1521:1521"
+      - "3306:3306"
     volumes:
-      - oracle-data:/opt/oracle/oradata
+      - mysql-data:/var/lib/mysql
     healthcheck:
-      test: ["CMD-SHELL", "echo 'SELECT 1 FROM DUAL;' | sqlplus -s RM98011/240885@//localhost:1521/XE"]
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
       interval: 30s
       timeout: 10s
-      retries: 10
+      retries: 5
 
   app:
     build: .
@@ -25,9 +26,9 @@ services:
       db:
         condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:oracle:thin:@db:1521:XE
-      SPRING_DATASOURCE_USERNAME: RM98011
-      SPRING_DATASOURCE_PASSWORD: 240885
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/your_database
+      SPRING_DATASOURCE_USERNAME: your_username
+      SPRING_DATASOURCE_PASSWORD: your_password
 
 volumes:
-  oracle-data:
+  mysql-data:
