--- a/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/pom.xml
+++ b/gestaoresiduos/ON_TDS_JAVA_ADVANCED_SPRING_BOOT-security/pom.xml
@@ -55,24 +55,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<!-- Flyway Core for Database Migrations -->
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
+       <dependency>
+    	<groupId>mysql</groupId>
+   		<artifactId>mysql-connector-java</artifactId>
+   		 <version>8.0.27</version>
+	   </dependency>
 
-		<!-- Flyway Oracle -->
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-database-oracle</artifactId>
-		</dependency>
 
-		<!-- Oracle JDBC Driver -->
-		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc11</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+
 
 		<!-- Lombok -->
 		<dependency>
@@ -94,16 +84,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--
-		<dependency>
-    		<groupId>com.mysql</groupId>
-    		<artifactId>mysql-connector-j</artifactId>
-    		<version>${mysql-connector-java.version}</version>
-    		<scope>runtime</scope>
-		</dependency>
-		 MySQL Connector/J -->
 
-		<!-- JWT Library -->
 		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
